--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-redux": "^6.0.9",
     "node-sass": "^4.9.3",
     "node-sass-glob-importer": "^5.2.0",
+    "svg-url-loader": "^2.3.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.11.0",
     "tslint-microsoft-contrib": "^5.2.1",
