--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sanitize.css": "^7.0.3"
   },
   "devDependencies": {
+    "@types/reach__router": "^1.2.0",
     "@types/react-helmet": "^5.0.7",
     "@types/react-redux": "^6.0.9",
     "node-sass": "^4.9.3",
