:up: Bump to gatsby v3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "exclude": ["./src/**/.*", "./node_modules/**/*"],
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "module": "commonjs",
     "baseUrl": "src",
     "paths": {
