--- a/package.json
+++ b/package.json
@@ -5,37 +5,32 @@
   "author": "Kanon Kakuno <yadex205@outlook.jp>",
   "license": "MIT",
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build",
-    "start": "gatsby develop",
-    "test": "tslint --project ."
+    "build": "gatsby build",
+    "start": "gatsby develop"
   },
   "dependencies": {
-    "gatsby": "^2.32.11",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-typescript": "^2.12.1",
-    "gatsby-source-contentful": "^2.3.56",
-    "gatsby-transformer-remark": "^2.16.1",
+    "fibers": "^5.0.0",
+    "gatsby": "^3.1.1",
+    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sass": "^4.1.0",
+    "gatsby-source-contentful": "^5.1.1",
+    "gatsby-transformer-remark": "^3.1.0",
+    "node-sass-glob-importer": "^5.3.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
-    "react-redux": "^5.1.2",
-    "react-transition-group": "^2.9.0",
-    "redux": "^4.0.5",
-    "sanitize.css": "^7.0.3"
+    "react-transition-group": "^4.4.1",
+    "sanitize.css": "^7.0.3",
+    "sass": "^1.32.8",
+    "svg-url-loader": "^7.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.7",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^16.9.11",
     "@types/react-helmet": "^5.0.16",
-    "@types/react-redux": "^6.0.14",
-    "@types/react-transition-group": "^2.9.2",
-    "node-sass": "^4.14.1",
-    "node-sass-glob-importer": "^5.3.2",
-    "svg-url-loader": "^2.3.3",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "tslint": "^5.20.1",
-    "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.9.9"
+    "@types/react-transition-group": "^4.4.1"
   },
   "private": true
 }
