--- a/.github/workflows/deploy-website-to-netlify.yml
+++ b/.github/workflows/deploy-website-to-netlify.yml
@@ -32,3 +32,9 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: gatsby-public-artifact
+          path: public
