--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    environment: workflow_environment
+    environment: production
     env:
       CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
       CONTENTFUL_CDA_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
