--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Install netlify-cli
+        run: npm install -g netlify-cli@^3.0.0
+
       - name: Install Node.js Depdendencies
         run: npm install
 
@@ -35,9 +38,8 @@ jobs:
           CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
           CONTENTFUL_CDA_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_CDA_ACCESS_TOKEN }}
 
-      - uses: netlify/actions/cli@master
-        with:
-          args: deploy --dir=public
+      - name: Deploy
+        run: netlify deploy --dir=public
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
