--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "start": "gatsby develop"
+    "start": "gatsby develop",
+    "deploy": "netlify deploy --prod --dir=public -m \"$NETLIFY_DEPLOY_MESSAGE\""
   },
   "dependencies": {
     "fibers": "^5.0.0",
@@ -30,7 +31,8 @@
     "@types/react": "^16.14.5",
     "@types/react-dom": "^16.9.11",
     "@types/react-helmet": "^5.0.16",
-    "@types/react-transition-group": "^4.4.1"
+    "@types/react-transition-group": "^4.4.1",
+    "netlify-cli": "^3.13.3"
   },
   "private": true
 }
