--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-source-contentful": "^5.1.1",
     "gatsby-transformer-remark": "^3.1.0",
+    "mini-svg-data-uri": "^1.2.3",
     "node-sass-glob-importer": "^5.3.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -32,7 +33,8 @@
     "@types/react-dom": "^16.9.11",
     "@types/react-helmet": "^5.0.16",
     "@types/react-transition-group": "^4.4.1",
-    "netlify-cli": "^3.13.3"
+    "netlify-cli": "^3.13.3",
+    "prettier": "^2.2.1"
   },
   "private": true
 }
