--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "scripts": {
     "build": "gatsby build",
     "start": "gatsby develop",
-    "deploy": "netlify deploy --prod --dir=public -m \"$NETLIFY_DEPLOY_MESSAGE\""
+    "deploy": "netlify deploy --prod --dir=public -m \"$NETLIFY_DEPLOY_MESSAGE\"",
+    "lint": "run-s lint:script lint:style",
+    "lint:script": "eslint ./src --ext .ts --ext .tsx --color",
+    "lint:style": "stylelint 'src/**/*.@(css|scss)'",
+    "lint:style:fix": "stylelint --fix 'src/**/*.@(css|scss)'",
+    "prettier": "prettier --check './**/*.@(js|ts|tsx|scss|css)'",
+    "prettier:fix": "prettier --write './**/*.@(js|ts|tsx|scss|css)'"
   },
   "dependencies": {
     "fibers": "^5.0.0",
@@ -32,8 +38,22 @@
     "@types/react-dom": "^16.9.11",
     "@types/react-helmet": "^5.0.16",
     "@types/react-transition-group": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-import": "^0.13.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "netlify-cli": "^3.13.3",
-    "prettier": "^2.2.1"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "stylelint": "^13.12.0",
+    "stylelint-config-hudochenkov": "^5.0.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0"
   },
   "private": true
 }
