:wrench: Update tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,27 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "components/*": ["components/*"],
-      "assets/*": ["assets/*"],
-      "layout": ["layout"],
-      "transition": ["transition"]
+      "*": ["src/*"]
     },
     "jsx": "react",
     "lib": ["dom", "esnext"],
+    "strict": true,
+    "resolveJsonModule": true,
     "experimentalDecorators": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowJs": false,
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "isolatedModules": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "strictNullChecks": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "skipLibCheck": true
+    "noImplicitReturns": true
   }
 }
