--- a/package.json
+++ b/package.json
@@ -22,27 +22,22 @@
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-source-contentful": "^5.1.1",
     "gatsby-transformer-remark": "^3.1.0",
-    "mini-svg-data-uri": "^1.2.3",
     "node-sass-glob-importer": "^5.3.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.1",
-    "react-transition-group": "^4.4.1",
-    "sanitize.css": "^7.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.32.8",
-    "svg-url-loader": "^7.1.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "@types/react": "^16.14.5",
-    "@types/react-dom": "^16.9.11",
-    "@types/react-helmet": "^5.0.16",
-    "@types/react-transition-group": "^4.4.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-helmet": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
-    "eslint-config-import": "^0.13.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "netlify-cli": "^3.13.3",
