--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "sass": "^1.32.8",
+    "swiper": "^6.5.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
