--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fibers": "^5.0.0",
     "gatsby": "^3.1.1",
     "gatsby-plugin-canonical-urls": "^3.1.0",
+    "gatsby-plugin-google-gtag": "^3.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-source-contentful": "^5.1.1",
